# OfficeIS

./: .gitignore  .gitmodules  CMakeLists.txt  config.h  config.h.in  main.cpp
cmake/: QtCommon.cmake
common/: CMakeLists.txt  dbmanager.cpp  dbmanager.h  equipmentmodel.cpp  equipmentmodel.h  qmldir  utils.cpp  utils.h
common/sql/: Equipment.sql  Projects.sql  Tasks.sql  UserData.sql
filehandler/: CMakeLists.txt  filehandler.cpp  filehandler.h  qmldir
filteringmodel/: CMakeLists.txt  filteringmodel.cpp  filteringmodel.h  modelattached.cpp  modelattached.h  node.h  qmldir
gui/: CMakeLists.txt  Global.qml  Style.qml  main.qml
gui/page_models/: AppElements.qml  PageViewer.qml
gui/pages/: AppAbout.qml  MyDocs.qml  MyEquipment.qml  MyProjects.qml  MyTeam.qml  StartPage.qml
gui/pages/account/: ForgetPass.qml  LoginUser.qml  RegisterUser.qml  SetNewPass.qml
gui/widgets/: BaseButton.qml  BaseCheckBox.qml  BaseComboBox.qml  BaseDateField.qml  BaseScrollIndicator.qml  BaseTask.qml  ClearSymbol.qml  EditFieldSymbol.qml  EquipmentDialog.qml  FormField.qml  MenuTile.qml  Notification.qml  PersonalSettingsPopUp.qml  ProjectDialog.qml  TaskDialog.qml  TeamDialog.qml  WarningSymbol.qml
logger/: CMakeLists.txt  input_logger.cpp  input_logger.h  logger.cpp  logger.h  qmldir
logger/logger_base/: CMakeLists.txt  loggerbase.cpp  loggerbase.h
